# hava_squizzy

./: .gitignore  Cargo.toml  README.md
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/server/: Cargo.toml
crates/server/html/: dynamic.js  line-simple.html
crates/server/src/: main.rs
examples/: explain.sql
