[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tungstenite = "0.18.0"
url = "2.3.1"
paris = { version = "1.5", features = ["timestamps", "macros"] }