[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.18.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18.0"
env_logger = "0.10.0"
url = "2.2.2"
paris = { version = "1.5", features = ["timestamps", "macros"] }